[package]
name = "rust-csv-toolkit"
version = "0.1.0"
authors = ["Pierre-Antoine Passet <pa@passet.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~2.27.0", features = ["yaml"] }
csv = "1.1"
